Overflow fix

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ html, body {
 	font-size: 16px;
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 }
 
 html {
